--- a/unidades/unidades.html
+++ b/unidades/unidades.html
@@ -20,7 +20,7 @@
   <header>
     <div class="header-bg">
       <nav class="header container">
-        <a href="./"><img src="../img/icones/logo.svg" alt="" width="70" height="53"></a>
+        <a href="../index.html"><img src="../img/icones/logo.svg" alt="" width="70" height="53"></a>
         <ul class="font-2-l-2 cor-c9">
           <li> <a href="./unidades.html">Unidades</a></li>
           <li> <a href="../cardapio/cardapio.html">Cardápio</a></li>
@@ -43,7 +43,7 @@
           <picture>
             <img src="../img/cidade1-min.jpg" alt="">
           </picture>
-          <a href="./sp" class="font-2-s cor-p2 link">CONHEÇA AGORA</a>
+          <a href="./sp.html" class="font-2-s cor-p2 link">CONHEÇA AGORA</a>
         </div>
       </div>
       <div class="unidade-rj container">
@@ -53,7 +53,7 @@
           <picture>
             <img class="img2" src="../img/cidade2-min.jpg" alt="">
           </picture>
-          <a href="./rj" class="font-2-s cor-p2 link">CONHEÇA AGORA</a>
+          <a href="./rj.html" class="font-2-s cor-p2 link">CONHEÇA AGORA</a>
         </div>
         <picture class="pic-img1">
           <img class="img1" src="../img/cidade2-min.jpg" alt="">
@@ -67,38 +67,38 @@
       <div class="footer-conteudo container font-2-s cor-c7">
         <ul class="footer-links">
           <li>
-            <a href="./unidades/unidades.html">Unidades</a>
+            <a href="./unidades.html">Unidades</a>
             <div>
-              <a class="font-2-xs cor-c6" href="./sao-paulo.html">São Paulo</a>
-              <a class="font-2-xs cor-c6" href="./rio-de-janeiro.html">Rio de Janeiro</a>
+              <a class="font-2-xs cor-c6" href="./sp.html">São Paulo</a>
+              <a class="font-2-xs cor-c6" href="./rj.html">Rio de Janeiro</a>
             </div>
           </li>
           <li>
-            <a href="./cardapio/cardapio.html">Cardapio</a>
+            <a href="../cardapio/cardapio.html">Cardapio</a>
             <div>
-              <a class="font-2-xs cor-c6" href="../pratos.html">Pratos</a>
-              <a class="font-2-xs cor-c6" href="../sobremesas.html">Sobremesas</a>
+              <a class="font-2-xs cor-c6" href="../cardapio/pratos.html">Pratos</a>
+              <a class="font-2-xs cor-c6" href="../cardapio/sobremesas.html">Sobremesas</a>
             </div>
           </li>
           <li>
             <a>Contatos</a>
             <div>
               <a class="font-2-xs cor-c6" href="./fale-conosco.html">Fale conosco</a>
-              <a class="font-2-xs cor-c6" href="./trabalhe_conosco.html">Trabalhe conosco</a>
+              <a class="font-2-xs cor-c6" href="../trabalhe_conosco.html">Trabalhe conosco</a>
             </div>
           </li>
           <li>
-            <a href="./termos.html">Outros</a>
+            <a href="../termos.html">Outros</a>
             <div>
-              <a class="font-2-xs cor-c6" href="./termos.html">Termos e condições</a>
+              <a class="font-2-xs cor-c6" href="../termos.html">Termos e condições</a>
             </div>
           </li>
           <li>
             <span>Siga-nos</span>
             <div class="icones">
-              <a href="./"><img src="./img/icones/facebook.svg" alt=""></a>
-              <a href="./"><img src="./img/icones/Twitter.svg" alt=""></a>
-              <a href="./"><img src="./img/icones/Linkedin.svg" alt=""></a>
+              <a href="./"><img src="../img/icones/facebook.svg" alt=""></a>
+              <a href="./"><img src="../img/icones/Twitter.svg" alt=""></a>
+              <a href="./"><img src="../img/icones/Linkedin.svg" alt=""></a>
             </div>
           </li>
         </ul>
