--- a/termos.html
+++ b/termos.html
@@ -19,15 +19,15 @@
 <body>
   <header>
     <div class="header-bg">
-      <div class="header container">
-        <nav>
-          <a href="./"><img src="./img/icones/logo.svg" alt="" width="70" height="53"></a>
-          <ul class="font-2-l-2 cor-c9">
-            <li> <a href="./unidades/unidades.html">Unidades</a></li>
-            <li> <a href="./cardapio/cardapio.html">Cardápio</a></li>
-          </ul>
-        </nav>
-      </div>
+      <nav class="header container">
+
+        <a href="./"><img src="./img/icones/logo.svg" alt="" width="70" height="53"></a>
+        <ul class="font-2-l-2 cor-c9">
+          <li> <a href="./unidades/unidades.html">Unidades</a></li>
+          <li> <a href="./cardapio/cardapio.html">Cardápio</a></li>
+        </ul>
+
+      </nav>
     </div>
   </header>
   <main class="termos">
