São Paulo feito

--- a/unidades/sp.html
+++ b/unidades/sp.html
@@ -20,7 +20,7 @@
   <header>
     <div class="header-bg">
       <nav class="header container">
-        <a href="./"><img src="../img/icones/logo.svg" alt="" width="70" height="53"></a>
+        <a href="../index.html"><img src="../img/icones/logo.svg" alt="" width="70" height="53"></a>
         <ul class="font-2-l-2 cor-c9">
           <li> <a href="./unidades.html">Unidades</a></li>
           <li> <a href="../cardapio/cardapio.html">Cardápio</a></li>
@@ -55,8 +55,75 @@
           </picture>
         </div>
       </article>
+      <article class="sp-3">
+        <img src="../img/detalhes/detalhe-e-cinza.svg" alt="">
+        <h1 class="font-1-xl cor-c2">Conheça agora</h1>
+        <div class="container">
+          <ul class="font-2-m-1 cor-c1">
+            <li>
+              <p>Rua Professor Azevedo Amaral, 70 Piso Térreo, Jardim Paulista, São Paulo - SP, 01409-030.</p>
+            </li>
+            <li>
+              <a href="mailto:joaorestaurants.sp@joaoresturants.com.br">joaorestaurants.sp@joaoresturants.com.br</a>
+              <a href="mailto:recepcao.sp@joaoresturants.com.br">recepcao.sp@joaoresturants.com.br</a>
+            </li>
+            <li>
+              <a href="tel:+55(11)99474-4972"><span>+ 55 (11) 9 9474-4972 </span></a>
+              <a href="tel:+55(11)99333-3850"><span>+ 55 (11) 9 9333-3850 </span></a>
+            </li>
+          </ul>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.9764498268028!2d-46.66708932466964!3d-23.56928927879439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59da43790451%3A0xa6404d56c74fe5c2!2sR.%20Bar%C3%A3o%20de%20Capanema%2C%2049%20-%20Jardim%20Paulista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001411-011!5e0!3m2!1spt-BR!2sbr!4v1707773351267!5m2!1spt-BR!2sbr" width="560" height="420" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </article>
     </section>
   </main>
+  <footer>
+    <div class="footer-bg">
+
+      <div class="footer-conteudo container font-2-s cor-c7">
+        <ul class="footer-links">
+          <li>
+            <a href="./unidades.html">Unidades</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="./sp.html">São Paulo</a>
+              <a class="font-2-xs cor-c6" href="./rj.html">Rio de Janeiro</a>
+            </div>
+          </li>
+          <li>
+            <a href="../cardapio/cardapio.html">Cardapio</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="../cardapio/pratos.html">Pratos</a>
+              <a class="font-2-xs cor-c6" href="../cardapio/sobremesas.html">Sobremesas</a>
+            </div>
+          </li>
+          <li>
+            <a>Contatos</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="../fale-conosco.html">Fale conosco</a>
+              <a class="font-2-xs cor-c6" href="../trabalhe_conosco.html">Trabalhe conosco</a>
+            </div>
+          </li>
+          <li>
+            <a href="../termos.html">Outros</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="../termos.html">Termos e condições</a>
+            </div>
+          </li>
+          <li>
+            <span>Siga-nos</span>
+            <div class="icones">
+              <a href="./sp.html"><img src="../img/icones/facebook.svg" alt=""></a>
+              <a href="./sp.html"><img src="../img/icones/Twitter.svg" alt=""></a>
+              <a href="./sp.html"><img src="../img/icones/Linkedin.svg" alt=""></a>
+            </div>
+          </li>
+        </ul>
+        <span class="footer-fim">Alguns direitos reservados © João Restaurant's Group</span>
+      </div>
+
+    </div>
+  </footer>
+  <script src="../script.js"></script>
 </body>
 
 </html>
