--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </article>
     <section aria-label="parceiros">
       <div class="parceiros">
-        <h1 class="font-1-xl-1 cor-c7">Nossos parceiros</h1>
+        <h1 class="font-1-xl cor-c7">Nossos parceiros</h1>
         <div class="parceiros-conteudo">
           <img src="./img/parceiros/parceiro1.svg" alt="">
           <img src="./img/parceiros/parceiro2.svg" alt="">
