--- a/unidades/sp.html
+++ b/unidades/sp.html
@@ -61,13 +61,16 @@
         <div class="container">
           <ul class="font-2-m-1 cor-c1">
             <li>
+              <img src="../img/icones/local.svg" alt="">
               <p>Rua Professor Azevedo Amaral, 70 Piso Térreo, Jardim Paulista, São Paulo - SP, 01409-030.</p>
             </li>
             <li>
+              <img src="../img/icones/email.svg" alt="">
               <a href="mailto:joaorestaurants.sp@joaoresturants.com.br">joaorestaurants.sp@joaoresturants.com.br</a>
               <a href="mailto:recepcao.sp@joaoresturants.com.br">recepcao.sp@joaoresturants.com.br</a>
             </li>
             <li>
+              <img src="../img/icones/telefone.svg" alt="">
               <a href="tel:+55(11)99474-4972"><span>+ 55 (11) 9 9474-4972 </span></a>
               <a href="tel:+55(11)99333-3850"><span>+ 55 (11) 9 9333-3850 </span></a>
             </li>
