--- a/unidades/rj.html
+++ b/unidades/rj.html
@@ -20,7 +20,7 @@
   <header>
     <div class="header-bg">
       <nav class="header container">
-        <a href="./"><img src="../img/icones/logo.svg" alt="" width="70" height="53"></a>
+        <a href="../index.html"><img src="../img/icones/logo.svg" alt="" width="70" height="53"></a>
         <ul class="font-2-l-2 cor-c9">
           <li> <a href="./unidades.html">Unidades</a></li>
           <li> <a href="../cardapio/cardapio.html">Cardápio</a></li>
@@ -28,6 +28,106 @@
       </nav>
     </div>
   </header>
+
+  <main class="pagina-bg">
+    <article class="titulo container">
+      <span class="font-2-l cor-c9"> Unidade Rio de Janerio</span>
+    </article>
+    <section>
+      <article class="rj-1">
+        <div>
+          <h1 class="font-1-x cor-c8">Copacabana</h1>
+          <p class="font-2-s cor-c9">Com uma vista de tirar o fôlego, a mais nova unidade da João Restaurant's está localizada de frente a uma das mais belas praia do mundo.</p>
+          <picture>
+            <img src="../img/rj/rj1.jpg" alt="">
+          </picture>
+          <span class="font-2-s cor-c9">Desfrute da melhor gastronomia do mundo ouvindo o som do mar</span>
+        </div>
+        <picture>
+          <img src="../img/rj/rj1.jpg" alt="">
+        </picture>
+
+      </article>
+      <article class="rj-2">
+        <img src="../img/detalhes/detalhe-jr-cinze.svg" alt="">
+        <div>
+          <picture><img src="../img/rj/rj2.jpg" alt=""></picture>
+          <span class="font-1-xl-1 cor-p2">Venha Vivenciar essa experiência única </span>
+        </div>
+
+      </article>
+      <article class="rj-3">
+        <img src="../img/detalhes/detalhe-e-cinza.svg" alt="">
+        <h1 class="font-1-xl cor-c8">Conheça agora</h1>
+        <div class="container">
+          <ul class="font-2-m-1 cor-c9">
+            <li>
+              <img src="../img/icones/local-cinza.svg" alt="">
+              <p>Av. Atlântica, 290 - Copacabana, Rio de Janeiro - RJ, 22010-000</p>
+            </li>
+            <li>
+              <img src="../img/icones/email-cinza.svg" alt="">
+              <a href="mailto:joaorestaurants.sp@joaoresturants.com.br">joaorestaurants.rj@joaoresturants.com.br</a>
+              <a href="mailto:recepcao.sp@joaoresturants.com.br">recepcao.rj@joaoresturants.com.br</a>
+            </li>
+            <li>
+              <img src="../img/icones/telefone-cinza.svg" alt="">
+              <a href="tel:+55(21)99474-4972"><span>+ 55 (21) 9 9474-4972 </span></a>
+              <a href="tel:+55(21)99333-3850"><span>+ 55 (21) 9 9333-3850 </span></a>
+            </li>
+          </ul>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.681707763866!2d-43.16892442544628!3d-22.961946439843246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x998005c33c554d%3A0x2880a3095694f98b!2sAv.%20Atl%C3%A2ntica%2C%20290%20-%20Copacabana%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022010-000!5e0!3m2!1spt-BR!2sbr!4v1707834886461!5m2!1spt-BR!2sbr" width="560" height="420" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </article>
+    </section>
+  </main>
+  <footer>
+    <div class="footer-bg">
+
+      <div class="footer-conteudo container font-2-s cor-c7">
+        <ul class="footer-links">
+          <li>
+            <a href="./unidades.html">Unidades</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="./sp.html">São Paulo</a>
+              <a class="font-2-xs cor-c6" href="./rj.html">Rio de Janeiro</a>
+            </div>
+          </li>
+          <li>
+            <a href="../cardapio/cardapio.html">Cardapio</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="../cardapio/pratos.html">Pratos</a>
+              <a class="font-2-xs cor-c6" href="../cardapio/sobremesas.html">Sobremesas</a>
+            </div>
+          </li>
+          <li>
+            <a>Contatos</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="../fale-conosco.html">Fale conosco</a>
+              <a class="font-2-xs cor-c6" href="../trabalhe_conosco.html">Trabalhe conosco</a>
+            </div>
+          </li>
+          <li>
+            <a href="../termos.html">Outros</a>
+            <div>
+              <a class="font-2-xs cor-c6" href="../termos.html">Termos e condições</a>
+            </div>
+          </li>
+          <li>
+            <span>Siga-nos</span>
+            <div class="icones">
+              <a href="./rj.html"><img src="../img/icones/facebook.svg" alt=""></a>
+              <a href="./rj.html"><img src="../img/icones/Twitter.svg" alt=""></a>
+              <a href="./rj.html"><img src="../img/icones/Linkedin.svg" alt=""></a>
+            </div>
+          </li>
+        </ul>
+        <span class="footer-fim">Alguns direitos reservados © João Restaurant's Group</span>
+      </div>
+
+    </div>
+  </footer>
+  <script src="../script.js"></script>
 </body>
 
 </html>
