--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" type="image/x-icon" href="./Favicon.svg">
+  <script>document.documentElement.classList.add("js");</script>
   <!-- Fontes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,13 +34,13 @@
       <div class="introducao-bg">
         <div class="introducao">
           <div class="introducao-conteudo">
-            <h1 class="font-1-x col-c9">João Restaurant's</h1>
-            <p class="font-2-s cor-c6">Com mais de 30 anos de tradição, a João Restaurant's é a maior companhia de gastronomia fina do mundo.
+            <h1 data-anime="200" class="fadeInDown font-1-x col-c9">João Restaurant's</h1>
+            <p data-anime="400" class="fadeInDown font-2-s cor-c6">Com mais de 30 anos de tradição, a João Restaurant's é a maior companhia de gastronomia fina do mundo.
             </p>
-            <a class="font-2-s-1 cor-c0 botao" href="./unidades/unidades.html">Venha conhecer</a>
+            <a data-anime="600" class="fadeInDown font-2-s-1 cor-c0 botao" href="./unidades/unidades.html">Venha conhecer</a>
           </div>
           <picture>
-            <img src="./img/restaurante1-min.jpg" alt="">
+            <img data-anime="200" class="fadeInDown" src="./img/restaurante1-min.jpg" alt="">
           </picture>
         </div>
       </div>
@@ -124,6 +125,7 @@
 
     </div>
   </footer>
+  <script src="./simple-anime.js"></script>
   <script src="./script.js"></script>
 </body>
 
