--- a/unidades/sp.html
+++ b/unidades/sp.html
@@ -9,6 +9,7 @@
   <link rel="preload" href="../css/style.css" as="style">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="icon" type="image/x-icon" href="../Favicon.svg">
+  <script>document.documentElement.classList.add("js");</script>
   <!-- Fontes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -126,6 +127,7 @@
 
     </div>
   </footer>
+  <script src="../simple-anime.js"></script>
   <script src="../script.js"></script>
 </body>
 
